Beef up link cell to allow for custom on click, tooltip not cut off, etc, fix styling of link cells with icons

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -215,7 +215,6 @@ $shadow-transition-width: 10px;
         }
         .link-cell,
         .text-cell {
-          display: inline-flex;
           overflow: hidden;
           white-space: nowrap;
           text-overflow: ellipsis;
@@ -224,16 +223,40 @@ $shadow-transition-width: 10px;
             white-space: normal;
           }
         }
+        .text-cell {
+          display: inline-flex;
+        }
         .link-cell {
+          display: block;
+          padding: $pad-small 0; // larger clickable area
+
           &:hover {
             text-decoration: underline;
           }
-
           > div {
             display: block;
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
+          }
+        }
+        // css to properly style link-cell with tooltip
+        .link-cell-tooltip {
+          overflow: visible; // fixes tooltip cut off within cell
+          .component__tooltip-wrapper {
+            display: block;
+            white-space: nowrap; // single line
+            margin: 0; // padding applied to .link-cell for larger clickable area
+            .component__tooltip-wrapper__element {
+              display: block;
+              white-space: nowrap; // single line
+              text-overflow: ellipsis; // truncates text
+              overflow: hidden;
+
+              .component__tooltip-wrapper__underline {
+                max-width: 100%; // fixes underline overflowing past truncated text
+              }
+            }
           }
         }
         .w400 {
