--- a/frontend/pages/software/ManageSoftwarePage/_styles.scss
+++ b/frontend/pages/software/ManageSoftwarePage/_styles.scss
@@ -154,12 +154,10 @@
                   display: table-cell;
                 }
               }
-              @media (min-width: $break-md) {
+              @media (min-width: $break-lg) {
                 .version__header {
                   width: $col-md;
                 }
-              }
-              @media (min-width: $break-lg) {
                 .source__header {
                   display: table-cell;
                 }
@@ -168,8 +166,7 @@
 
             tbody {
               .name__cell {
-                width: $col-md;
-
+                max-width: $col-md;
                 // Tooltip does not get cut off
                 .children-wrapper {
                   overflow: initial;
@@ -204,9 +201,9 @@
                   }
                 }
               }
-              @media (min-width: $break-md) {
-                .version_cell {
-                  width: $col-md;
+              @media (min-width: $break-sm) {
+                .name__cell {
+                  max-width: $col-lg;
                 }
               }
               @media (min-width: $break-md) {
@@ -215,6 +212,9 @@
                 }
               }
               @media (min-width: $break-lg) {
+                .version_cell {
+                  width: $col-md;
+                }
                 .source__cell {
                   display: table-cell;
                 }
